--- a/index.html
+++ b/index.html
@@ -98,15 +98,6 @@
         </div>
     </section>
 
-    <!-- Intro to Myths -->
-    <section class="myths-intro">
-        <div class="container">
-            <div class="card">
-                <h2>Common myths about alarms</h2>
-            </div>
-        </div>
-    </section>
-
     <!-- Myth 1 -->
     <section class="myth">
         <div class="container">
@@ -151,28 +142,13 @@
         </div>
     </section>
 
-    <!-- Myths Debunked -->
-    <section class="myths-conclusion">
-        <div class="container">
-            <div class="card">
-                <p class="section-footer">Today, we debunk them all.</p>
-            </div>
-        </div>
-    </section>
-
     <!-- Wireless Technology Section -->
     <section class="wireless">
         <div class="container">
             <div class="card">
-                <h2>Security without dust or wires</h2>
                 <div class="feature-image">
                     <img src="images/Pic6.jpg" alt="Jeweller wireless technology">
                 </div>
-                <div class="feature-box">
-                    <h3>Jeweller wireless technology</h3>
-                    <p class="feature-detail">Installed in hours.<br>No drilling required.</p>
-                </div>
-                <p class="tech-spec">Range: 2,000 metres - covers house, garage, garden</p>
             </div>
         </div>
     </section>
@@ -211,7 +187,6 @@
         <div class="container">
             <div class="card">
                 <h2>See what happens</h2>
-                <p class="feature-intro">Real-time video monitoring</p>
                 <div class="feature-image">
                     <img src="images/Pic9.jpg" alt="Video surveillance">
                 </div>
@@ -237,16 +212,6 @@
         </div>
     </section>
 
-    <!-- Reliability Section -->
-    <section class="reliability">
-        <div class="container">
-            <div class="card">
-                <h2>Reliability when it matters most</h2>
-                <p class="section-footer">More resilient than Wi-Fi cameras alone.</p>
-            </div>
-        </div>
-    </section>
-
     <!-- CTA Section -->
     <section class="cta">
         <div class="container">
@@ -256,7 +221,9 @@
                 <div class="cta-image">
                     <img src="images/Pic1.jpg" alt="Professional consultation">
                 </div>
-                <button class="cta-button" id="openModal">Get a Quote</button>
+                <div class="cta-button-wrapper">
+                    <button class="cta-button" id="openModal">Get a Quote</button>
+                </div>
                 <p class="section-footer">Professional installation. Lifetime support.</p>
             </div>
         </div>
